generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                  String          @id @default(cuid())
  nik                 String          @unique
  name                String
  email               String?         @unique
  password            String
  role                Role            @default(SUPERVISOR_SHOP)
  department          String?
  location            String?         @default("Kantor Jakarta")
  createdAt           DateTime        @default(now())
  updatedAt           DateTime        @updatedAt
  image               String?
  failedLoginAttempts Int             @default(0)
  lockedUntil         DateTime?
  comments            Comment[]
  articles            KnowledgeBase[]
  notifications       Notification[]
  ticketsAssigned     Ticket[]        @relation("TicketAssignee")
  ticketsCreated      Ticket[]        @relation("TicketCreator")
}

model Ticket {
  id            String         @id @default(cuid())
  ticketNumber  String         @unique
  title         String
  description   String
  status        TicketStatus   @default(OPEN)
  priority      TicketPriority @default(MEDIUM)
  category      String?
  ahpScore      Float?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  creatorId     String
  assigneeId    String?
  kbArticleId   String?
  attachments   String[]       @default([])
  comments      Comment[]
  notifications Notification[]
  assignee      User?          @relation("TicketAssignee", fields: [assigneeId], references: [id])
  creator       User           @relation("TicketCreator", fields: [creatorId], references: [id])
  kbArticle     KnowledgeBase? @relation(fields: [kbArticleId], references: [id])
}

model Comment {
  id          String   @id @default(cuid())
  content     String
  createdAt   DateTime @default(now())
  ticketId    String
  authorId    String
  attachments String[] @default([])
  author      User     @relation(fields: [authorId], references: [id])
  ticket      Ticket   @relation(fields: [ticketId], references: [id])
}

model KnowledgeBase {
  id        String   @id @default(cuid())
  title     String
  content   String
  category  String
  tags      String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  authorId  String
  author    User     @relation(fields: [authorId], references: [id])
  tickets   Ticket[]
}

model AHPCriteria {
  id          String   @id @default(cuid())
  name        String
  weight      Float
  description String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  title     String
  message   String
  type      String   @default("INFO")
  read      Boolean  @default(false)
  link      String?
  createdAt DateTime @default(now())
  ticketId  String?
  ticket    Ticket?  @relation(fields: [ticketId], references: [id])
  user      User     @relation(fields: [userId], references: [id])
}

model ShiftSchedule {
  id        String   @id @default(cuid())
  date      DateTime
  shift     String
  agentName String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([date, shift])
}

model ShiftSwapRequest {
  id             String    @id @default(cuid())
  requesterName  String
  requesterShift String
  requesterDate  DateTime
  targetName     String
  targetShift    String
  targetDate     DateTime
  reason         String?
  status         String    @default("PENDING")
  approvedBy     String?
  approvedAt     DateTime?
  createdAt      DateTime  @default(now())
  updatedAt      DateTime  @updatedAt
}


enum Role {
  SUPER_ADMIN
  IT_SUPPORT
  MANAGER
  SUPERVISOR
  FINANCE
  STAFF
  SECURITY
  SUPERVISOR_SHOP
}

enum TicketStatus {
  OPEN
  IN_PROGRESS
  PENDING
  RESOLVED
  CLOSED
  CANCELLED
}

enum TicketPriority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}
